RecreatedS strapi app after project architecture change

--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lyon-p-3-sens-interdit",
+  "name": "strapi-sens-interdits",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,23 +11,23 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.2.0",
-    "strapi-admin": "3.2.0",
-    "strapi-utils": "3.2.0",
-    "strapi-plugin-content-type-builder": "3.2.0",
-    "strapi-plugin-content-manager": "3.2.0",
-    "strapi-plugin-users-permissions": "3.2.0",
-    "strapi-plugin-email": "3.2.0",
-    "strapi-plugin-upload": "3.2.0",
-    "strapi-connector-bookshelf": "3.2.0",
+    "strapi": "3.2.5",
+    "strapi-admin": "3.2.5",
+    "strapi-utils": "3.2.5",
+    "strapi-plugin-content-type-builder": "3.2.5",
+    "strapi-plugin-content-manager": "3.2.5",
+    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-plugin-email": "3.2.5",
+    "strapi-plugin-upload": "3.2.5",
+    "strapi-connector-bookshelf": "3.2.5",
     "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "mysql": "latest"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "55b67b99-c63e-484c-9d20-0fb6b7566c3d"
+    "uuid": "70c24ec8-4956-48dc-87b3-54ce3d1e364c"
   },
   "engines": {
     "node": ">=10.0.0",
