--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "knex": "<0.20.0",
+    "mysql": "^2.18.1",
     "strapi": "3.2.5",
     "strapi-admin": "3.2.5",
-    "strapi-utils": "3.2.5",
-    "strapi-plugin-content-type-builder": "3.2.5",
+    "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
-    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-plugin-content-type-builder": "3.2.5",
     "strapi-plugin-email": "3.2.5",
     "strapi-plugin-upload": "3.2.5",
-    "strapi-connector-bookshelf": "3.2.5",
-    "knex": "<0.20.0",
-    "mysql": "latest"
+    "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-utils": "3.2.5"
   },
   "author": {
     "name": "A Strapi developer"
