--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "knex": "<0.20.0",
     "mysql": "^2.18.1",
-    "strapi": "^3.2.5",
+    "strapi": "3.2.5",
     "strapi-admin": "3.2.5",
     "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
