Added a tab-element component that can be used in any collection

--- a/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
+++ b/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "spectacles",
   "info": {
-    "name": "spectacle"
+    "name": "spectacle",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -24,6 +25,11 @@
     },
     "content": {
       "type": "richtext"
+    },
+    "tab_element": {
+      "type": "component",
+      "repeatable": true,
+      "component": "menu.tab-element"
     }
   }
 }
