added a date component for the date field in spectacle collection

--- a/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
+++ b/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
@@ -32,6 +32,11 @@
       "type": "component",
       "repeatable": false,
       "component": "menu.medias-slider"
+    },
+    "spectacle_dates": {
+      "type": "component",
+      "repeatable": true,
+      "component": "info.spectacle-date"
     }
   }
 }
