--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -15,13 +15,14 @@
     "mysql": "^2.18.1",
     "strapi": "3.2.5",
     "strapi-admin": "3.2.5",
+    "strapi-cli": "^2.0.0",
     "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
     "strapi-plugin-content-type-builder": "3.2.5",
     "strapi-plugin-email": "3.2.5",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
-    "strapi-utils": "3.2.5"
+    "strapi-utils": "^3.2.5"
   },
   "author": {
     "name": "A Strapi developer"
