--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -18,7 +18,7 @@
     "gatsby": "^2.24.79",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-responsive-carousel": "^3.2.10",
+    "react-responsive-carousel": "^3.2.10"
   },
   "devDependencies": {
     "prettier": "2.1.2"
