--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "gatsby": "^2.24.79",
+    "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive-carousel": "^3.2.10"
