--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "knex": "<0.20.0",
     "mysql": "^2.18.1",
-    "strapi": "3.2.5",
+    "strapi": "^3.3.2",
     "strapi-admin": "3.2.5",
-    "strapi-cli": "^2.0.0",
     "strapi-connector-bookshelf": "3.2.5",
     "strapi-plugin-content-manager": "3.2.5",
     "strapi-plugin-content-type-builder": "3.2.5",
     "strapi-plugin-email": "3.2.5",
+    "strapi-plugin-graphql": "^3.3.3",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
     "strapi-utils": "^3.2.5"
