--- a/BACK/strapi-sens-interdits/api/festival/models/festival.settings.json
+++ b/BACK/strapi-sens-interdits/api/festival/models/festival.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "festivals",
   "info": {
-    "name": "festival"
+    "name": "festival",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -24,6 +25,9 @@
     },
     "spectacles": {
       "collection": "spectacle"
+    },
+    "category": {
+      "type": "string"
     }
   }
 }
