--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
