--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -18,6 +18,7 @@
     "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive-carousel": "^3.2.10"
