--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "dayjs": "^1.9.6",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
-    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive-carousel": "^3.2.10"
