--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -17,8 +17,9 @@
     "axios": "^0.21.0",
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "path": "^0.12.7",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-responsive-carousel": "^3.2.10"
   },
   "devDependencies": {
