--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.9.6",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
+    "gatsby-source-filesystem": "^2.6.1",
     "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
