--- a/BACK/strapi-sens-interdits/api/festival/models/festival.settings.json
+++ b/BACK/strapi-sens-interdits/api/festival/models/festival.settings.json
@@ -28,6 +28,20 @@
     },
     "category": {
       "type": "string"
+    },
+    "infopratique": {
+      "via": "festival",
+      "model": "infopratique"
+    },
+    "carousel": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.medias-slider"
+    },
+    "squaremenu": {
+      "type": "component",
+      "repeatable": true,
+      "component": "menu.display-tab-menu"
     }
   }
 }
