--- a/BACK/strapi-sens-interdits/api/type-of-events/models/type-of-events.settings.json
+++ b/BACK/strapi-sens-interdits/api/type-of-events/models/type-of-events.settings.json
@@ -15,8 +15,8 @@
       "type": "string"
     },
     "spectacles": {
-      "collection": "spectacle",
-      "via": "type_of_events"
+      "via": "type_of_events",
+      "collection": "spectacle"
     }
   }
 }
