--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-markdown": "^5.0.3",
     "react-responsive-carousel": "^3.2.10",
