--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-strapi": "0.0.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
     "react-responsive-carousel": "^3.2.10",
     "showdown": "^1.9.1"
