--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -24,7 +24,8 @@
     "strapi-plugin-graphql": "^3.3.3",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
-    "strapi-utils": "^3.2.5"
+    "strapi-utils": "^3.2.5",
+    "utf8": "^3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
