--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -13,6 +13,7 @@
     "eslint": "^4.19.1"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "knex": "<0.20.0",
     "mysql": "^2.18.1",
     "strapi": "^3.3.2",
