--- a/BACK/strapi-sens-interdits/package.json
+++ b/BACK/strapi-sens-interdits/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "dotenv": "^8.2.0",
     "knex": "<0.20.0",
     "mysql": "^2.18.1",
     "strapi": "^3.3.2",
