--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
     "gatsby-source-strapi": "0.0.12",
+    "query-string": "^6.13.7",
     "react": "^16.12.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
