--- a/BACK/strapi-sens-interdits/api/ecole/models/ecole.settings.json
+++ b/BACK/strapi-sens-interdits/api/ecole/models/ecole.settings.json
@@ -31,6 +31,17 @@
     },
     "title": {
       "type": "string"
+    },
+    "title_en": {
+      "type": "string"
+    },
+    "description_en": {
+      "type": "richtext"
+    },
+    "tab_element_en": {
+      "type": "component",
+      "repeatable": true,
+      "component": "menu.tab-element"
     }
   }
 }
