--- a/BACK/strapi-sens-interdits/api/home-display-tab/models/home-display-tab.settings.json
+++ b/BACK/strapi-sens-interdits/api/home-display-tab/models/home-display-tab.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "home_display_tabs",
   "info": {
-    "name": "Home_display_tab"
+    "name": "Home_display_tab",
+    "description": ""
   },
   "options": {
     "increments": true,
