--- a/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
+++ b/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
@@ -16,6 +16,12 @@
     },
     "content": {
       "type": "text"
+    },
+    "Title_en": {
+      "type": "string"
+    },
+    "content_en": {
+      "type": "text"
     }
   }
 }
