--- a/BACK/strapi-sens-interdits/api/infopratique/models/infopratique.settings.json
+++ b/BACK/strapi-sens-interdits/api/infopratique/models/infopratique.settings.json
@@ -29,8 +29,8 @@
       "component": "menu.tab-element"
     },
     "festival": {
-      "model": "festival",
-      "via": "infopratique"
+      "via": "infopratique",
+      "model": "festival"
     }
   }
 }
