--- a/BACK/strapi-sens-interdits/api/type-of-events/models/type-of-events.settings.json
+++ b/BACK/strapi-sens-interdits/api/type-of-events/models/type-of-events.settings.json
@@ -15,8 +15,11 @@
       "type": "string"
     },
     "spectacles": {
-      "via": "type_of_events",
-      "collection": "spectacle"
+      "collection": "spectacle",
+      "via": "type_of_events"
+    },
+    "category_en": {
+      "type": "string"
     }
   }
 }
