--- a/BACK/strapi-sens-interdits/api/typeofarticle/models/typeofarticle.settings.json
+++ b/BACK/strapi-sens-interdits/api/typeofarticle/models/typeofarticle.settings.json
@@ -15,8 +15,11 @@
       "type": "string"
     },
     "articlecontents": {
-      "via": "typeofarticles",
-      "collection": "articlecontent"
+      "collection": "articlecontent",
+      "via": "typeofarticles"
+    },
+    "category_en": {
+      "type": "string"
     }
   }
 }
