--- a/BACK/strapi-sens-interdits/api/global-menu/models/global-menu.settings.json
+++ b/BACK/strapi-sens-interdits/api/global-menu/models/global-menu.settings.json
@@ -16,6 +16,41 @@
       "repeatable": true,
       "component": "menu.global-menu-link",
       "max": 8
+    },
+    "home": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "festival": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "production": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "transmission": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "association": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "news": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
+    },
+    "archives": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.menulink"
     }
   }
 }
