--- a/BACK/strapi-sens-interdits/api/newspage/models/newspage.settings.json
+++ b/BACK/strapi-sens-interdits/api/newspage/models/newspage.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "newspages",
   "info": {
-    "name": "newspage"
+    "name": "newspage",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,6 +15,12 @@
       "type": "string"
     },
     "content": {
+      "type": "text"
+    },
+    "title_en": {
+      "type": "string"
+    },
+    "content_en": {
       "type": "text"
     }
   }
