--- a/BACK/strapi-sens-interdits/api/conditions/models/conditions.settings.json
+++ b/BACK/strapi-sens-interdits/api/conditions/models/conditions.settings.json
@@ -1,6 +1,6 @@
 {
   "kind": "singleType",
-  "collectionName": "conditions",
+  "collectionName": "cgv",
   "info": {
     "name": "conditions",
     "description": ""
