--- a/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
+++ b/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
@@ -22,6 +22,11 @@
     },
     "content_en": {
       "type": "text"
+    },
+    "carousel": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.medias-slider"
     }
   }
 }
