--- a/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
+++ b/BACK/strapi-sens-interdits/api/spectacle/models/spectacle.settings.json
@@ -122,8 +122,8 @@
       "type": "text"
     },
     "festival": {
-      "model": "festival",
-      "via": "spectacles"
+      "via": "spectacles",
+      "model": "festival"
     },
     "reserver": {
       "type": "string"
