--- a/BACK/strapi-sens-interdits/api/webradio/models/webradio.settings.json
+++ b/BACK/strapi-sens-interdits/api/webradio/models/webradio.settings.json
@@ -15,8 +15,7 @@
       "collection": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": false
