--- a/FRONT/gatsby-sens-interdits/package.json
+++ b/FRONT/gatsby-sens-interdits/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.9.6",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.79",
+    "gatsby-plugin-breadcrumb": "^10.0.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-source-strapi": "0.0.12",
     "query-string": "^6.13.7",
