--- a/BACK/strapi-sens-interdits/api/assopage/models/assopage.settings.json
+++ b/BACK/strapi-sens-interdits/api/assopage/models/assopage.settings.json
@@ -37,6 +37,11 @@
     },
     "content": {
       "type": "richtext"
+    },
+    "seo_asso": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
