--- a/BACK/strapi-sens-interdits/api/diffusion-production/models/diffusion-production.settings.json
+++ b/BACK/strapi-sens-interdits/api/diffusion-production/models/diffusion-production.settings.json
@@ -32,6 +32,11 @@
     },
     "description_en": {
       "type": "richtext"
+    },
+    "seo_diffusionproduction": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
