--- a/BACK/strapi-sens-interdits/api/ecole/models/ecole.settings.json
+++ b/BACK/strapi-sens-interdits/api/ecole/models/ecole.settings.json
@@ -42,6 +42,11 @@
       "type": "component",
       "repeatable": true,
       "component": "menu.tab-element"
+    },
+    "seo_ecole": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
