--- a/BACK/strapi-sens-interdits/api/homepage/models/homepage.settings.json
+++ b/BACK/strapi-sens-interdits/api/homepage/models/homepage.settings.json
@@ -41,6 +41,11 @@
     },
     "description_en": {
       "type": "richtext"
+    },
+    "seo_home": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
