--- a/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
+++ b/BACK/strapi-sens-interdits/api/hors-scene-page/models/hors-scene-page.settings.json
@@ -27,6 +27,11 @@
       "type": "component",
       "repeatable": false,
       "component": "menu.medias-slider"
+    },
+    "seo_horscenepage": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
