--- a/BACK/strapi-sens-interdits/api/newspage/models/newspage.settings.json
+++ b/BACK/strapi-sens-interdits/api/newspage/models/newspage.settings.json
@@ -22,6 +22,16 @@
     },
     "content_en": {
       "type": "text"
+    },
+    "carousel": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.medias-slider"
+    },
+    "seo_newspage": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
