--- a/BACK/strapi-sens-interdits/api/partnerpage/models/partnerpage.settings.json
+++ b/BACK/strapi-sens-interdits/api/partnerpage/models/partnerpage.settings.json
@@ -27,6 +27,16 @@
     },
     "title_en": {
       "type": "string"
+    },
+    "seo_partner": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
+    },
+    "carousel": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.medias-slider"
     }
   }
 }
