--- a/BACK/strapi-sens-interdits/api/webradio/models/webradio.settings.json
+++ b/BACK/strapi-sens-interdits/api/webradio/models/webradio.settings.json
@@ -51,6 +51,11 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "seo_webradio": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
