--- a/BACK/strapi-sens-interdits/api/archive-description/models/archive-description.settings.json
+++ b/BACK/strapi-sens-interdits/api/archive-description/models/archive-description.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "archive_descriptions",
   "info": {
-    "name": "archive_description"
+    "name": "archive_description",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -21,6 +22,16 @@
     },
     "description_en": {
       "type": "richtext"
+    },
+    "seo_archivedescription": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
+    },
+    "carousel": {
+      "type": "component",
+      "repeatable": false,
+      "component": "menu.medias-slider"
     }
   }
 }
