--- a/BACK/strapi-sens-interdits/api/parole/models/parole.settings.json
+++ b/BACK/strapi-sens-interdits/api/parole/models/parole.settings.json
@@ -41,6 +41,11 @@
       "type": "component",
       "repeatable": true,
       "component": "menu.tab-element"
+    },
+    "seo_parole": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
