--- a/BACK/strapi-sens-interdits/api/seminaire/models/seminaire.settings.json
+++ b/BACK/strapi-sens-interdits/api/seminaire/models/seminaire.settings.json
@@ -43,6 +43,11 @@
       "type": "component",
       "repeatable": true,
       "component": "menu.tab-element"
+    },
+    "seo_seminaire": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
