--- a/BACK/strapi-sens-interdits/api/transmission/models/transmission.settings.json
+++ b/BACK/strapi-sens-interdits/api/transmission/models/transmission.settings.json
@@ -31,6 +31,11 @@
     },
     "description_en": {
       "type": "richtext"
+    },
+    "seo_transmission": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo.seo"
     }
   }
 }
