--- a/BACK/strapi-sens-interdits/api/archive-description/models/archive-description.settings.json
+++ b/BACK/strapi-sens-interdits/api/archive-description/models/archive-description.settings.json
@@ -31,7 +31,8 @@
     "carousel": {
       "type": "component",
       "repeatable": false,
-      "component": "menu.medias-slider"
+      "component": "menu.medias-slider",
+      "required": true
     }
   }
 }
